packages/assets/src/scss/inputs/_dropdown.scss
@use '../functions' as *;
@use '../variables' as *;
@use '../mixins/utils' as utils-mixins;

.ids-dropdown {
    $self: &;

    position: relative;

    &__source {
        @include utils-mixins.hidden;
    }

    &__widget {
        min-width: calculateRem(160px);
        padding: calculateRem(12px) calculateRem(16px);
        display: flex;
        justify-content: space-between;
        align-items: center;
        cursor: pointer;

        .ids-expander {
            width: initial;
            height: initial;
        }
    }

    &__selection-info {
        min-width: 0;
        min-width: 0;
        flex-grow: 1;
        user-select: none;

    &__selection-info-items {
        min-width: 0;
    }
    }

    &__selection-info-items {
        min-width: 0;
    }

    &__placeholder {
        color: $color-neutral-160;
    }

    &__items-container {
        border-radius: $border-radius-medium;
        border: calculateRem(1px) solid $color-neutral-80;
        background-color: $color-neutral-10;
        margin: calculateRem(4px) 0;
        box-sizing: border-box;
        z-index: 1000;
    }

    &__search {
        padding: calculateRem(8px);
    }

    &__search:not([hidden]) + .ids-dropdown__items {
        padding-top: 0;
        max-height: calc(calculateRem(32px) * var(--max-visible-items, 10) + calculateRem(8px));
    }

    &__items {
        list-style: none;
        margin: 0;
        padding: calculateRem(8px);
        max-height: calc(calculateRem(32px) * var(--max-visible-items, 10) + calculateRem(16px));
        overflow-y: auto;
        box-sizing: border-box;
    }

    &__item {
        display: flex;
        align-items: center;
        padding: calculateRem(4px) calculateRem(8px) calculateRem(5px);
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
        border: calculateRem(1px) solid transparent;
        border-radius: $border-radius-medium;
        user-select: none;
        outline: none;
    }

    &--error {
        #{$self}__placeholder {
            color: $color-error-90;
        }

        .ids-expander--has-icon {
            .ids-icon {
                fill: $color-error-90;
            }
        }
    }

    &--single {
        #{$self} {
            &__item {
                position: relative;
                z-index: 1;
                justify-content: space-between;

                &:not(.ids-dropdown__item--selected) {
                    &:hover {
                        color: $color-primary-80;
                        cursor: pointer;
                    }

                    &:active {
                        border-color: $color-primary-80;
                    }

                    &:focus {
                        border-color: $color-primary-80;
                        box-shadow: $box-shadow-focus-primary;
                    }
                }

                &--selected {
                    background-color: $color-neutral-40;
                    z-index: 0;
                }
            }
        }
    }

    &--multi {
        #{$self} {
            &__widget.ids-input:hover:has(.ids-chip__delete:hover) {
                border-color: var(--ids-input-default-border-color, #{$color-neutral-80});
            }

            &__item {
                display: flex;
                align-items: center;
                gap: calculateRem(8px);

                &:hover {
                    color: $color-primary-80;
                    cursor: pointer;

                    .ids-input--checkbox {
                        border-color: $color-primary-80;
                    }
                }

                &:focus-within {
                    color: $color-primary-80;
                }
                    min-width: 0;
            }

            &__selection-info {
                .ids-overflow-list {
                    margin: calculateRem(-4px);
                    min-width: 0;

                    .ids-chip {
                        margin: calculateRem(4px);
                    }
                }
            }
        }
    }
}

